# germanoc

./: CMakeLists.txt  LICENSE  README.md  ast.c  ast.h  codegen.c  codegen.h  main.c  parser.c  parser.h  str_utils.c  str_utils.h  test.mosconi
argtable3/: CMakeLists.txt
compiler/: CMakeLists.txt  compiler.c  compiler.h
include/: CMakeLists.txt  ast.h  codegen.h  compiler.h  macros.h  parser.h
lib/: CMakeLists.txt
lib/argtable3/: CMakeLists.txt  LICENSE
lib/compiler/: CMakeLists.txt  compiler.c
lib/mpc/: CMakeLists.txt  LICENSE
mpc/: CMakeLists.txt
src/: CMakeLists.txt  ast.c  codegen.c  compiler.c  main.c  parser.c
src/codegen/: CMakeLists.txt  print.c  read.c  var_decl.c  var_expr.c
src/parser/: CMakeLists.txt  apply.c  fold.c
